--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 </head>
    <body>
       <title>Breast Cancer Prediction</title>
+	   <h1>Breast Cancer Prediction</h1>
 	  <div class="container">
 		<div class="row">
 
